// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowFilter components Given a CenteredFlexContainer should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
}

<div
    class="c0"
  >
    <p>
      Test
    </p>
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a CloseButton should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0.c0 {
  padding: 0;
  text-align: right;
  overflow-wrap: anywhere;
  background: #f7f7f7;
  color: #257f39;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  border-radius: 0;
  border: 0;
}

.c0.c0:hover,
.c0.c0:active {
  background: #f7f7f7;
  border: 0;
}

.c0.c0:focus {
  border: 0;
  border-radius: 0;
}

<button
    class="MuiButtonBase-root MuiButton-root MuiButton-text c0"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a CloseIcon should match the snapshot correctly when 'isFullWidthMode' is false 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.75rem;
  width: 2.75rem;
}

<img
    class="c0"
    src="image.jpeg"
  />
</DocumentFragment>
`;

exports[`ShowFilter components Given a CloseIcon should match the snapshot correctly when 'isFullWidthMode' is true 1`] = `
<DocumentFragment>
  .c0 {
  height: 0.8375rem;
  width: 0.8375rem;
}

<img
    class="c0"
    src="image.jpeg"
  />
</DocumentFragment>
`;

exports[`ShowFilter components Given a CloseIconButton should match the snapshot correctly when 'isFullWidthMode' is false 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  position: fixed;
  right: 30rem;
  top: 0rem;
  margin-right: 0;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a CloseIconButton should match the snapshot correctly when 'isFullWidthMode' is true 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  position: initial;
  right: 30rem;
  top: 0rem;
  margin-right: 1rem;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a DrawerContainer should match the snapshot correctly 1`] = `<DocumentFragment />`;

exports[`ShowFilter components Given a DrawerContent should match the snapshot correctly when 'isFullWidthMode' is false 1`] = `
<DocumentFragment>
  .c0 {
  width: 30rem;
  height: 100%;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a DrawerContent should match the snapshot correctly when 'isFullWidthMode' is true 1`] = `
<DocumentFragment>
  .c0 {
  width: 100vw;
  height: 100%;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a EmptyFlexContainer should render correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-right: .0625rem solid #9e9e9e;
  background: #f7f7f7;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FeatFacetsContainer should render the component correctly to match the snapshot when there is no right border 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  border-right: none;
  border-bottom: .0625rem solid #9e9e9e;
  background: #ffffff;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FeatFacetsContainer should render the component correctly to match the snapshot when there is right border 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  border-right: .0625rem solid #9e9e9e;
  border-bottom: .0625rem solid #9e9e9e;
  background: #ffffff;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FiltersBodyContainer should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 7.5rem);
  width: 100%;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 c0"
  >
    <p>
      Test
    </p>
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FiltersContainer should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: auto;
  overflow-y: auto;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c0.c0::-webkit-scrollbar {
  display: none;
}

<div
    class="c0"
  >
    <p>
      Test
    </p>
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FiltersContainerFooter should render the component correctly to match the snapshot when 'isFullWidthMode' is false 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #f7f7f7;
  border-top: 0.0625rem solid #eaeaea;
  padding: 0 1.5rem;
  height: 4.75rem;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 components__AccentedContainer-sc-1hp5vxi-11 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FiltersContainerFooter should render the component correctly to match the snapshot when 'isFullWidthMode' is true 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #f7f7f7;
  border-top: 0.0625rem solid #eaeaea;
  padding: 0 1rem;
  height: 4.75rem;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 components__AccentedContainer-sc-1hp5vxi-11 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FiltersContainerHeader should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #f7f7f7;
  height: 2.75rem;
  padding: 1rem;
  border-bottom: .0625rem solid #9e9e9e;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 components__AccentedContainer-sc-1hp5vxi-11 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a FiltersPanelContainer should render correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  overflow-y: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c0.c0::-webkit-scrollbar {
  display: none;
}

@media (max-width:0) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a LoadingSpinner should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0.loading {
  position: relative;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.c0.loading:after {
  content: "";
  opacity: 0;
  position: absolute;
  border-radius: 100%;
  width: 0px;
  height: 0px;
  border: 0.125rem solid rgba(102,143,112,0.05);
  border-left-color: #30a74b;
  border-top-color: #30a74b;
  -webkit-animation: spin 0.6s infinite linear,grow 0.3s forwards ease-out;
  animation: spin 0.6s infinite linear,grow 0.3s forwards ease-out;
  -webkit-transition: opacity 0.3s ease;
  transition: opacity 0.3s ease;
}

<span
    class="c0"
  />
</DocumentFragment>
`;

exports[`ShowFilter components Given a PaddedWrapper should render correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 1.25rem;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a SelectedFacetIndicator should render correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0.375rem;
  margin: auto;
  height: 0.25rem;
  width: 0.25rem;
  background: #30a74b;
  border-radius: 50%;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a ShowFiltersContainer should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 c0"
  >
    <p>
      Test
    </p>
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a SpinnerWrapper should render correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  right: 0;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a StyledFacetButton should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    <p>
      Test
    </p>
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a StyledFacetButton when 'isFocused' is set to 'true' and when left border is shown should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: none;
  border-top: .0625rem solid #9e9e9e;
  border-bottom: .0625rem solid #9e9e9e;
  border-left: 0.1875rem solid #000000;
  background: #ffffff;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    <p>
      Test
    </p>
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a StyledFacetButton when 'isFocused' is set to 'true' and when top border is hidden should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: none;
  border-top: none;
  border-bottom: .0625rem solid #9e9e9e;
  border-left: none;
  background: #ffffff;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    <p>
      Test
    </p>
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a StyledFacetButton when 'isFocused' is set to 'true' should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: none;
  border-top: .0625rem solid #9e9e9e;
  border-bottom: .0625rem solid #9e9e9e;
  border-left: none;
  background: #ffffff;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    <p>
      Test
    </p>
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a StyledFacetButton when 'isFocused' is set to 'true' when 'isFocused' is set to 'false' should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: .0625rem solid #9e9e9e;
  background: #f7f7f7;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
  >
    <p>
      Test
    </p>
  </button>
</DocumentFragment>
`;

exports[`ShowFilter components Given a TabbedFacetsContainer should render correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 100%;
}

@media (max-width:320px) {
  .c0 {
    width: 100%;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a Text should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
}

.c0 span {
  color: #515151;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    Test
  </p>
</DocumentFragment>
`;

exports[`ShowFilter components Given a TextWrapper should render the component correctly to match the snapshot when 'fullWidth' is true 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a TextWrapper should render the component correctly to match the snapshot when 'isKeyFilter' is true 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 70%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a TextWrapper should render the component correctly to match the snapshot when 'noBorder' is false 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 90%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a TextWrapper should render the component correctly to match the snapshot when 'noBorder' is true 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: none;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 90%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="components__CenteredFlexContainer-sc-1hp5vxi-7 c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a Tick When RTL it should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 1.0625rem;
  width: 0.625rem;
  position: relative;
  margin-top: -0.325rem;
  -webkit-transform: rotate(45deg) scale(-1,1);
  -ms-transform: rotate(45deg) scale(-1,1);
  transform: rotate(45deg) scale(-1,1);
}

.c1 {
  position: absolute;
  bottom: 0;
  background: #30a74b;
  -webkit-transition: height 0.3 ease-in;
  transition: height 0.3 ease-in;
  right: 0;
  height: 0;
  width: 0.1875rem;
  -webkit-animation: strokeExpand 0.4s ease;
  animation: strokeExpand 0.4s ease;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c2 {
  position: absolute;
  bottom: 0;
  background: #30a74b;
  -webkit-transition: height 0.3 ease-in;
  transition: height 0.3 ease-in;
  height: 0.1875rem;
  width: 0px;
  left: 0;
  -webkit-animation: strokeExpand2 0.2s ease;
  animation: strokeExpand2 0.2s ease;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

<div
    class="c0"
  >
    <span
      class="c1"
    />
    <span
      class="c2"
    />
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a Tick should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 1.0625rem;
  width: 0.625rem;
  position: relative;
  margin-top: -0.325rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  position: absolute;
  bottom: 0;
  background: #30a74b;
  -webkit-transition: height 0.3 ease-in;
  transition: height 0.3 ease-in;
  right: 0;
  height: 0;
  width: 0.1875rem;
  -webkit-animation: strokeExpand 0.4s ease;
  animation: strokeExpand 0.4s ease;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.c2 {
  position: absolute;
  bottom: 0;
  background: #30a74b;
  -webkit-transition: height 0.3 ease-in;
  transition: height 0.3 ease-in;
  height: 0.1875rem;
  width: 0px;
  left: 0;
  -webkit-animation: strokeExpand2 0.2s ease;
  animation: strokeExpand2 0.2s ease;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

<div
    class="c0"
  >
    <span
      class="c1"
    />
    <span
      class="c2"
    />
  </div>
</DocumentFragment>
`;

exports[`ShowFilter components Given a Title should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
  text-transform: uppercase;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    Test
  </p>
</DocumentFragment>
`;

exports[`ShowFilter components Given a ViewResultsButton should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: 2.75rem;
  text-transform: uppercase;
}

.c0:hover,
.c0:active,
.c0:focus {
  background: #30a74b;
  border: 0;
  color: #ffffff;
}

<button
    class="MuiButtonBase-root MuiButton-root MuiButton-text c0"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
